<resources>
    <string name="app_name">CabEx</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_here"><u>Hesab açın</u></string>
    <string name="login_here"><u>Daxil olun</u></string>
    <string name="daha_etrafli"><u>Daha Ətraflı</u></string>
    <string name="title_map">Xəritə</string>
    <string name="title_notifications">Bildirişlər</string>
    <string name="title_car_gets_closer">Sifariş etdiyiniz avtomobil məntəqəyə yaxışlaşır.</string>
    <string name="title_car_out_there">Sifariş etdiyiniz avtomobil məntəqəyə çatıb.</string>
    <string name="title_car_left">Sifariş etdiyiniz avtomobil başlanğıc nöqtəni tərk etdi.</string>
    <string name="title_follow_on_the_map">Xəritədə izlə</string>

    <string name="title_choose_on_map">Xəritədə seç</string>
    <string name="title_start_point">Başlanğıc nöqtə</string>
    <string name="title_destination_point">Son nöqtə</string>
    <string name="title_about_radius">Radiusun nə olduğu barədə açıqlama</string>
    <string name="title_search">Axtar</string>
    <string name="title_order_confirmed">Sifarişiniz uğurla təsdiq olundu</string>
    <string name="title_decline_order">Sifarişi ləğv et</string>
    <string name="title_close_fragment">Bağla</string>
    <string name="title_reset_password">Şifrəni yenilə</string>
    <string name="button_text_send">Göndər</string>
    <string name="title_reset_password_with_phone">Qeydiyyatdan keçdiyiniz telefon nömrənizi qeyd edin, həmin nömrənizə yeni şifrə göndəriləcək</string>
    <string name="title_phone_number">Telefon nömrəsi</string>
    <string name="title_profile">Profil</string>
    <string name="title_change_profile_picture"><u>Profil şəklini dəyişdir</u></string>
    <string name="title_name">Ad</string>
    <string name="title_surname">Soyad</string>
    <string name="title_e_mail">E-poçt</string>
    <string name="title_car_name">Avtomobilin markası</string>
    <string name="title_plate_number">Avtomobilin nömrəsi</string>
    <string name="title_number_of_seats">Oturacaqların sayı</string>
    <string name="title_repeat_password">Şifrəni yenidən yaz</string>
    <string name="title_new_password">Yeni şifrə</string>
    <string name="title_remember_changes">Dəyişiklikləri yadda saxla</string>
    <string name="title_reset">Yenilə</string>
    <string name="title_current_password">İndiki şifrə</string>

    <!--    <string name="title_starting_point">Başlanğıc nöqtəsi</string>-->
    <!--    <string name="title_end_point">Son nöqtə</string>-->
    <string name="title_departure_time">Başlanğıc nöqtəni tərk etmə vaxtı</string>
    <string name="title_min">min</string>
    <string name="title_max">max</string>
    <string name="title_price_range">Qiymət aralığı</string>
    <string name="title_distance_range">Məsafə aralıği</string>
    <string name="title_or">yaxud</string>
    <string name="title_filter">Filter</string>
    <string name="title_time_for_start_point">Başlanğıc nöqtəni tərk etmə vaxtı</string>
    <string name="ifr_ni_unutmusunuz"><u>Şifrəni unutmusunuz?</u></string>
    <string name="lbl_leave"><u>Hesabdan çıx</u></string>
    <string name="lbl_app_info">İndi tətbiqdən istifadə etməyə başla, həm puluna qənaət et, həm də yol yoldaşını tap</string>
</resources>