<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirm_order_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/secondary_main_color"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/succsess_check_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_success_check_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/confirmed_order_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_order_confirmed"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/succsess_check_icon" />

        <TextView
            android:id="@+id/order_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="00:20"
            android:textAlignment="center"
            android:textColor="@color/text_color_grey"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmed_order_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/decline_order_in_confirm_order_fragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/light_red"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_decline_order"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:cornerRadius="8dp"
            app:elevation="20dp"
            app:layout_constraintEnd_toStartOf="@+id/close_in_confirm_order_fragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_countdown" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_in_confirm_order_fragment"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/light_green"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_close_fragment"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:cornerRadius="8dp"
            app:elevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/decline_order_in_confirm_order_fragment"
            app:layout_constraintTop_toBottomOf="@+id/order_countdown" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>




