<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/go_back_btn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_go_back_button"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotten_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/go_back_btn"
            android:fontFamily="@font/poppins_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title_reset_password"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/header_reset_password"
        app:layout_constraintBottom_toTopOf="@+id/reset_password"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_new_password"
            android:textColor="@color/wire_back_ground"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/icon_color_grey"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_repeat_password"
            android:textColor="@color/wire_back_ground"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/icon_color_grey"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppins_medium"
        android:foregroundGravity="center"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/title_reset"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>