<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ChooseOnMapFragment">

    <RelativeLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title_choose_on_map"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-50dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        android:elevation="-5dp"
        app:layout_constraintTop_toBottomOf="@id/start_layout" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_oval_layout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="80dp"
            android:layout_height="6dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/icon_color_grey"
            android:src="@drawable/close_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/start_point_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/close_button"
            android:layout_marginTop="37dp"
            app:boxBackgroundColor="@color/input_color_grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/title_start_point"
                android:textColor="@color/text_color_grey"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/destination_point_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_point_input_layout"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/input_color_grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/title_destination_point"
                android:textColor="@color/text_color_grey"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_radius_info"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:layout_height="wrap_content"
            android:layout_below="@id/destination_point_input_layout"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_about_radius"
            android:textSize="14sp" />


        <com.google.android.material.slider.RangeSlider
            android:id="@+id/seek_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_radius_info"
            android:layout_marginTop="10dp"
            android:stepSize="50.0"
            android:valueFrom="0.0"
            android:valueTo="3000.0"
            app:values="@array/initial_range_slider_values"
            tools:ignore="SpeakableTextPresentCheck" />


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_radius"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:padding="16dp"
            android:text="@string/title_search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="8dp"

            />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>